<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9fbf7"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/banner"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_init" />


    <android.support.v7.widget.CardView
        android:id="@+id/cv_init"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/green_in_tree_breakfast_verify"
                android:textColor="@color/color_green"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:text="@string/hotel_code"
                android:textColor="@color/color_gray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_hotel_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/color_black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="54dp"
                android:background="@drawable/bg_login_active"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/green_in_tree_breakfast_verify"
                android:textColor="@color/color_green"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_bind_input"
                android:padding="10dp">

                <EditText
                    android:id="@+id/et_hotel_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/please_input_hotel_code"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#dddddd"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="15sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/verify_code_send_to_hotel_manager"
                android:textColor="@color/color_green"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_bind_input"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/et_verify_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/please_input_verify_code"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColorHint="#dddddd"
                    android:textCursorDrawable="@drawable/bg_cursor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_get_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/get_verify_code"
                    android:textColor="#4a90e2"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_bind_device"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_login_active"
                android:gravity="center"
                android:text="@string/bind_mc"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cd_check_version"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_below="@id/cv_init"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/have_new_version"
                android:textColor="@color/color_light_yellow"
                android:textSize="14sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_download_new_version"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:background="@drawable/bg_download_new_version"
                android:gravity="center"
                android:text="@string/download_update"
                android:textColor="@color/color_white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/version"
        android:textColor="#999999"
        android:textSize="12sp" />
</RelativeLayout>