<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AtyVerify">

    <RelativeLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#ffffff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/green_in_tree_breakfast_verify"
            android:textColor="#000000"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#eeeeee" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fafafa"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_card" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/icon_card"
            android:text="@string/card"
            android:textColor="#999999"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="8dp"
            android:textColor="#27ba69"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="345dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffff">

        <TextView
            android:id="@+id/tv_verify_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/green_in_tree_breakfast_verify"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:id="@+id/view_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fafafa"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/icon_history" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/icon_history"
            android:text="@string/verify_history"
            android:textColor="#999999"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="8dp"
            android:textColor="#27ba69"
            android:textSize="16sp" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_verify_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp" />
</LinearLayout>